<resources>
    <string name="app_name">Brastlewark Town</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_info">Information</string>
    <string name="str1">This app was developed by</string>
    <string name="str2">Ernesto Valdez</string>
    <string name="str3">Can you contact me by:</string>
    <string name="contact1">Email</string>
    <string name="contact2">mailto:ernestovm07@gmail.com</string>
    <string name="contact3">Whatsapp</string>
    <string name="contact4">https://api.whatsapp.com/send?phone=525516823244</string>
    <string name="contact5">LinkedIn</string>
    <string name="contact6">https://www.linkedin.com/in/ernestovaldez/</string>
    <string name="avatar">Avatar</string>
    <string name="isConnected">Is Connected?</string>

    <string name="find1">Find By Id</string>
    <string name="find2">Find By Name</string>
    <string name="find3">Find By Age</string>
    <string name="find4">Find By Weight</string>
    <string name="find5">Find By Height</string>
    <string name="find6">Find By Hair Color</string>
    <string name="find7">Find By Profession</string>
    <string name="find8">Find By Friend</string>
</resources>
